# customer-churn-prediction

./: .gitignore  README.md  pyproject.toml
data/: README.md
reports/: metrics.json
scripts/: download_data.py
src/churn/: __init__.py  config.py  data.py  eda.py  evaluate.py  features.py  train.py
tests/: test_data.py  test_features.py
